# essay-scoring

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate_answers.py  pyproject.toml  requirements.txt
app/: feature_engineering.py  logger_config.py  main.py  models.yaml
app/models/: model.joblib  model_pendidikan_agama_islam--xi.joblib  model_pendidikan_pancasila_dan_kewarganegaraan--x.joblib
app/models/deep-learning/pemeliharaan_kelistrikan_kendaraan_ringan--xii/: model.keras  vectorizer.joblib
app/models/xgboost/matematika--xii/: feature_engineer.joblib
app/models/xgboost/pemeliharaan_kelistrikan_kendaraan_ringan--xii/: feature_engineer.joblib
app/models/xgboost/pendidikan_pancasila_dan_kewarganegaraan--xi/: feature_engineer.joblib  model.joblib
app/models/xgboost/pendidikan_pancasila_dan_kewarganegaraan--xii/: feature_engineer.joblib
app/models/xgboost/produk_kreatif_dan_kewirausahaan_-_otkp--xii/: model.joblib  vectorizer.joblib
tests/: test_feature_engineering.py  test_main.py
training/: __init__.py  data_manager.py  model_trainer.py  train.py  utils.py
